fix(codegen): bind the transform overload Java binds, or refuse the row (#414)