@@ -1337,8 +1337,40 @@ public final class BridgeProcessor extends AbstractTelescopeProcessor {
           final var bridgePackage = processingEnv
             .getElementUtils()
             .getPackageOf(carrierEl != null ? carrierEl : source);
-          final var fwd = resolvedFn(usingEl, "forward", sfType, bridgePackage);
-          final var bwd = resolvedFn(usingEl, "backward", tfType, bridgePackage);
+          final var fwdRes = resolvedFn(usingEl, "forward", sfType, bridgePackage);
+          final var bwdRes = resolvedFn(usingEl, "backward", tfType, bridgePackage);
+          // An ambiguous call is one Java refuses outright rather than resolving, so neither a
+          // bound member nor the interface's arguments describe what the emitted call site does.
+          // Only for a direction that is emitted, though: a forward-only row writes a literal
+          // where the backward call would go, so how many backward overloads apply to it is not a
+          // question anything asks. Refusing on it turns a build that compiles into one that does
+          // not, which is the failure this check exists to prevent rather than cause.
+          final var forwardOnly = forwardOnlyTransforms.contains(t);
+          final var backwardAmbiguous = bwdRes instanceof Resolution.Ambiguous && !forwardOnly;
+          if (fwdRes instanceof Resolution.Ambiguous || backwardAmbiguous) {
+            final var forward = fwdRes instanceof Resolution.Ambiguous;
+            final var amb = (Resolution.Ambiguous) (forward ? fwdRes : bwdRes);
+            error(
+              source,
+              "@Transform field=\"" +
+                t +
+                "\": " +
+                transforms.get(t) +
+                "'s " +
+                (forward ? "forward" : "backward") +
+                " is ambiguous for " +
+                (forward ? sfType : tfType) +
+                " between (" +
+                amb.a() +
+                ") and (" +
+                amb.b() +
+                "). Java refuses such a call rather than choosing, so leave one overload" +
+                " applicable."
+            );
+            continue;
+          }
+          final var fwd = fwdRes instanceof Resolution.Bound b ? b.member() : null;
+          final var bwd = bwdRes instanceof Resolution.Bound b2 ? b2.member() : null;
           // Neither a resolved member nor a type argument describes this direction, so there is
           // nothing to read: the comparisons below would index an empty argument list. Removing
           // this guard does not widen the check, it throws IndexOutOfBoundsException out of the
@@ -1346,11 +1378,18 @@ public final class BridgeProcessor extends AbstractTelescopeProcessor {
           // raw-implementing BridgeFn, or one leaving a direction abstract -- cannot be
           // instantiated as a transform anyway, so emission refuses them a moment later.
           final var typed = args.size() == 2;
-          if ((fwd == null || bwd == null) && !typed) continue;
+          // One skip served both directions, which is wrong for a row that emits only one of them.
+          // A forward-only row never reads the backward slots, so their being unreadable is not a
+          // reason to skip it -- and skipping took the forward check along, handing the author the
+          // javac error inside a generated file that this check exists to replace.
+          if ((fwd == null || (!forwardOnly && bwd == null)) && !typed) continue;
           final var fwdAccepts = fwd == null ? erasedBound(args.get(0)) : fwd.getParameterTypes().getFirst();
           final var fwdGives = fwd == null ? erasedBound(args.get(1)) : fwd.getReturnType();
-          final var bwdAccepts = bwd == null ? erasedBound(args.get(1)) : bwd.getParameterTypes().getFirst();
-          final var bwdGives = bwd == null ? erasedBound(args.get(0)) : bwd.getReturnType();
+          // Null only where the guard above let a row through without them, which is exactly where
+          // nothing reads them.
+          final var bwdAccepts =
+            bwd != null ? bwd.getParameterTypes().getFirst() : typed ? erasedBound(args.get(1)) : null;
+          final var bwdGives = bwd != null ? bwd.getReturnType() : typed ? erasedBound(args.get(0)) : null;
 
           // Both sides are compared against the type the field is declared with. For a bean that
           // is the getter's, and the emission may write through a setter, a builder method or a
@@ -1360,8 +1399,7 @@ public final class BridgeProcessor extends AbstractTelescopeProcessor {
           // that does not compile, which is the failure this check exists to replace.
           final var forwardFits = types.isAssignable(sfType, fwdAccepts) && types.isAssignable(fwdGives, tfType);
           final var backwardFits =
-            forwardOnlyTransforms.contains(t) ||
-            (types.isAssignable(tfType, bwdAccepts) && types.isAssignable(bwdGives, sfType));
+            forwardOnly || (types.isAssignable(tfType, bwdAccepts) && types.isAssignable(bwdGives, sfType));
           if (!forwardFits || !backwardFits) {
             // Name the signature the call site binds to, not the interface's parameterisation.
             // Those differ whenever an overload or an override is what gets bound, and a message
@@ -3146,8 +3184,8 @@ public final class BridgeProcessor extends AbstractTelescopeProcessor {
 
   /**
    * The {@code forward} or {@code backward} the emitted call site will actually bind to, as a
-   * signature rather than as a name. Three things decide it, and reading the interface's type
-   * arguments gets all three wrong.
+   * signature rather than as a name. Four things decide it, and reading the interface's type
+   * arguments gets all four wrong.
    *
    * <p>A member inherited from a generic base carries that base's type variables, which mean
    * nothing on their own — {@code asMemberOf} substitutes them for what the subclass fixed them to,
@@ -3158,14 +3196,20 @@ public final class BridgeProcessor extends AbstractTelescopeProcessor {
    * non-generic class keeps at the call site, which lets a mismatched {@code List<String>} through
    * to fail inside the generated file.
    *
-   * <p>Among applicable overloads the most specific parameter wins, which is the rule javac itself
-   * applies at the call site. Ordering on the return type instead makes the answer depend on
-   * declaration order: two overloads returning the same type compare equal, so whichever is visited
-   * last is kept.
+   * <p>Java resolves a call in phases and stops at the first that yields a candidate: the first
+   * admits subtyping and widening primitive conversion, the second adds boxing and unboxing. So an
+   * {@code int} binds {@code forward(long)} without {@code forward(Integer)} ever being weighed
+   * against it — which is as well, since a primitive and a wrapper are unrelated by subtyping and
+   * the question of which is more specific has no answer.
+   *
+   * <p>Within that phase the most specific parameter wins, which is the rule javac applies at the
+   * call site. Where no candidate is more specific than all the others, javac calls the call site
+   * ambiguous rather than choosing, and so does this.
    *
    * @param argType what the call site will pass, so inapplicable overloads are discarded first
+   * @return what the call site binds, that no overload applies, or that two apply equally
    */
-  private ExecutableType resolvedFn(
+  private Resolution resolvedFn(
     final TypeElement usingEl,
     final String name,
     final TypeMirror argType,
@@ -3174,7 +3218,8 @@ public final class BridgeProcessor extends AbstractTelescopeProcessor {
     final var types = processingEnv.getTypeUtils();
     final var owner = (DeclaredType) usingEl.asType();
     final var raw = !usingEl.getTypeParameters().isEmpty();
-    ExecutableType best = null;
+    final var applicable = new ArrayList<ExecutableType>();
+    final var strict = new ArrayList<ExecutableType>();
     for (final var m : ElementFilter.methodsIn(processingEnv.getElementUtils().getAllMembers(usingEl))) {
       if (!m.getSimpleName().contentEquals(name) || m.getParameters().size() != 1) continue;
       if (m.getModifiers().contains(Modifier.ABSTRACT)) continue;
@@ -3183,19 +3228,52 @@ public final class BridgeProcessor extends AbstractTelescopeProcessor {
       // does bind is then the one that fails.
       if (!bindableFrom(m, callerPackage)) continue;
       final var seen = (ExecutableType) types.asMemberOf(owner, m);
-      final var param = raw ? types.erasure(seen.getParameterTypes().getFirst()) : seen.getParameterTypes().getFirst();
+      final var param = paramOf(seen, raw);
       if (!types.isAssignable(argType, param)) continue;
-      if (best == null) {
-        best = seen;
-        continue;
-      }
-      final var bestParam = raw
-        ? types.erasure(best.getParameterTypes().getFirst())
-        : best.getParameterTypes().getFirst();
-      if (types.isSubtype(types.erasure(param), types.erasure(bestParam))) best = seen;
+      applicable.add(seen);
+      // Java resolves a call in phases and stops at the first that yields a candidate: the first
+      // admits subtyping and primitive widening, the second adds boxing and unboxing. So an int
+      // argument binds forward(long) even though forward(Integer) is also applicable, and a check
+      // that weighs the two together picks by specificity -- a question neither answers, since a
+      // primitive and a wrapper are unrelated by subtyping.
+      if (argType.getKind().isPrimitive() == param.getKind().isPrimitive()) strict.add(seen);
     }
-    if (best == null) return null;
-    return raw ? (ExecutableType) types.erasure(best) : best;
+    final var phase = strict.isEmpty() ? applicable : strict;
+    if (phase.isEmpty()) return new Resolution.None();
+
+    // The most specific candidate is the one whose parameter every other candidate's parameter is
+    // not more specific than. Where two are mutually unrelated there is no such candidate, and
+    // javac calls the call site ambiguous rather than picking one -- so keeping the first seen
+    // makes the verdict depend on declaration order and describes a call that will not compile.
+    var best = phase.getFirst();
+    for (final var candidate : phase) {
+      if (types.isSubtype(types.erasure(paramOf(candidate, raw)), types.erasure(paramOf(best, raw)))) best = candidate;
+    }
+    final var bestParam = types.erasure(paramOf(best, raw));
+    for (final var candidate : phase) {
+      final var param = types.erasure(paramOf(candidate, raw));
+      if (!types.isSameType(param, bestParam) && !types.isSubtype(bestParam, param)) {
+        return new Resolution.Ambiguous(bestParam, param);
+      }
+    }
+    return new Resolution.Bound(raw ? (ExecutableType) types.erasure(best) : best);
+  }
+
+  private TypeMirror paramOf(final ExecutableType m, final boolean raw) {
+    final var param = m.getParameterTypes().getFirst();
+    return raw ? processingEnv.getTypeUtils().erasure(param) : param;
+  }
+
+  /** What the emitted call site will bind to, or why it will not bind. */
+  private sealed interface Resolution {
+    /** Exactly one overload is applicable and most specific; this is what the call site binds. */
+    record Bound(ExecutableType member) implements Resolution {}
+
+    /** No overload applies, so the interface's own type arguments still describe the direction. */
+    record None() implements Resolution {}
+
+    /** Two overloads apply equally. Java refuses such a call, so no fallback describes it. */
+    record Ambiguous(TypeMirror a, TypeMirror b) implements Resolution {}
   }
 
   // A type-variable argument stands for whatever the emitter's raw call site erases it to, so the
